tests/ui/extern/issue-28324.stderr
error[E0080]: cannot access extern static `error_message_count`
  --> $DIR/issue-28324.rs:5:23
   |
LL | pub static BAZ: u32 = *&error_message_count;
   |                       ^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAZ` failed here

error[E0133]: use of extern static is unsafe and requires unsafe function or block
  --> $DIR/issue-28324.rs:5:25
   |
LL | pub static BAZ: u32 = *&error_message_count;
   |                         ^^^^^^^^^^^^^^^^^^^ use of extern static
   |
   = note: extern statics are not controlled by the Rust type system: invalid data, aliasing violations or data races will cause undefined behavior

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0133.
For more information about an error, try `rustc --explain E0080`.
